--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 ### IntelliJ IDEA ###
 out/
 !**/src/main/**/out/
-!**/src/test/**/out/
+
+
+
+# Ignorar o arquivo de configuração com senha
 config.properties
 
 ### Eclipse ###
